tests/paczka1/small_fuzzy/35317517.err
Error in line 8: xPBUGJ43i A587 80,6
Error in line 6: A587 A538 84,2
Error in line 9: xPBUGJ43i A709 71,9
Error in line 12: xPBUGJ43i A538 36,2
